// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ImageBodyView > matches snapshot for animated-preview story 1`] = `
<div>
  <div
    class="ImageBodyView-module_root"
  >
    <a
      class="ImageBodyView-module_link"
      href="http://localhost:63315/static/image-body/install-spinner.gif"
    >
      <div
        class="ImageBodyView-module_thumbnailContainer"
        style="width: min(100%, 320px); max-width: 320px; max-height: 320px; aspect-ratio: 1 / 1;"
      >
        <div
          class="ImageBodyView-module_mediaContent"
        >
          <img
            alt="Element logo"
            class="ImageBodyView-module_image"
            src="http://localhost:63315/static/image-body/install-spinner.png"
          />
          <p
            class="ImageBodyView-module_gifLabel"
          >
            GIF
          </p>
        </div>
      </div>
    </a>
    <div>
      File body slot
    </div>
  </div>
</div>
`;

exports[`ImageBodyView > matches snapshot for default story 1`] = `
<div>
  <div
    class="ImageBodyView-module_root"
  >
    <a
      class="ImageBodyView-module_link"
      href="http://localhost:63315/static/image-body/install-spinner.png"
    >
      <div
        class="ImageBodyView-module_thumbnailContainer"
        style="width: min(100%, 320px); max-width: 320px; max-height: 320px; aspect-ratio: 1 / 1;"
      >
        <div
          class="ImageBodyView-module_mediaContent"
        >
          <img
            alt="Element logo"
            class="ImageBodyView-module_image"
            src="http://localhost:63315/static/image-body/install-spinner.png"
          />
        </div>
      </div>
    </a>
    <div>
      File body slot
    </div>
  </div>
</div>
`;

exports[`ImageBodyView > matches snapshot for error story 1`] = `
<div>
  <span
    class="ImageBodyView-module_root ImageBodyView-module_error"
  >
    <svg
      class="ImageBodyView-module_errorIcon"
      fill="currentColor"
      height="16"
      viewBox="0 0 24 24"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M5 3a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h7.803a6 6 0 0 1-.72-2H5v-3.172l4-4 3.585 3.585a6 6 0 0 1 1.172-1.656l-3.343-3.343a2 2 0 0 0-2.828 0L5 13V5h14v7.083c.718.12 1.393.368 2 .72V5a2 2 0 0 0-2-2z"
      />
      <path
        d="M17 9a2 2 0 1 1-4 0 2 2 0 0 1 4 0m1 5a1 1 0 0 1 1 1v3a1 1 0 1 1-2 0v-3a1 1 0 0 1 1-1m-1 7a1 1 0 1 1 2 0 1 1 0 0 1-2 0"
      />
    </svg>
    Unable to show image due to error
  </span>
</div>
`;

exports[`ImageBodyView > matches snapshot for hidden story 1`] = `
<div>
  <div
    class="ImageBodyView-module_root"
  >
    <div
      class="ImageBodyView-module_thumbnailContainer"
      style="width: min(100%, 320px); max-width: 320px; max-height: 320px; aspect-ratio: 1 / 1;"
    >
      <div
        class="ImageBodyView-module_mediaContent"
      >
        <div
          style="width: 320px; height: 320px;"
        >
          <button
            class="ImageBodyView-module_hiddenButton"
            type="button"
          >
            <div
              class="ImageBodyView-module_hiddenButtonContent"
            >
              <svg
                fill="currentColor"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 16q1.875 0 3.188-1.312Q16.5 13.375 16.5 11.5t-1.312-3.187T12 7 8.813 8.313 7.5 11.5t1.313 3.188T12 16m0-1.8q-1.125 0-1.912-.787A2.6 2.6 0 0 1 9.3 11.5q0-1.125.787-1.912A2.6 2.6 0 0 1 12 8.8q1.125 0 1.912.787.788.788.788 1.913t-.787 1.912A2.6 2.6 0 0 1 12 14.2m0 4.8q-3.475 0-6.35-1.837Q2.775 15.324 1.3 12.2a.8.8 0 0 1-.1-.312 3 3 0 0 1 0-.775.8.8 0 0 1 .1-.313q1.475-3.125 4.35-4.962Q8.525 4 12 4t6.35 1.838T22.7 10.8a.8.8 0 0 1 .1.313 3 3 0 0 1 0 .774.8.8 0 0 1-.1.313q-1.475 3.125-4.35 4.963Q15.475 19 12 19m0-2a9.54 9.54 0 0 0 5.188-1.488A9.77 9.77 0 0 0 20.8 11.5a9.77 9.77 0 0 0-3.613-4.012A9.54 9.54 0 0 0 12 6a9.55 9.55 0 0 0-5.187 1.487A9.77 9.77 0 0 0 3.2 11.5a9.77 9.77 0 0 0 3.613 4.012A9.54 9.54 0 0 0 12 17"
                />
              </svg>
              <span>
                Show image
              </span>
            </div>
          </button>
        </div>
      </div>
    </div>
    <div>
      File body slot
    </div>
  </div>
</div>
`;

exports[`ImageBodyView > matches snapshot for loading-with-blurhash story 1`] = `
<div>
  <div
    class="ImageBodyView-module_root"
  >
    <a
      class="ImageBodyView-module_link"
      href="http://localhost:63315/static/image-body/install-spinner.png"
    >
      <div
        class="ImageBodyView-module_thumbnailContainer"
        style="width: min(100%, 320px); max-width: 320px; max-height: 320px; aspect-ratio: 1 / 1;"
      >
        <div
          class="ImageBodyView-module_placeholder ImageBodyView-module_placeholderBlurhash"
        >
          <div
            class="ImageBodyView-module_blurhash"
            style="display: inline-block; height: 320px; width: 320px; position: relative;"
          >
            <canvas
              height="32"
              style="position: absolute; inset: 0px; width: 100%; height: 100%;"
              width="32"
            />
          </div>
        </div>
        <div
          class="ImageBodyView-module_mediaContent"
        >
          <img
            alt="Element logo"
            class="ImageBodyView-module_image"
            src="http://localhost:63315/static/image-body/install-spinner.png"
          />
        </div>
      </div>
    </a>
    <div>
      File body slot
    </div>
  </div>
</div>
`;

exports[`ImageBodyView > matches snapshot for loading-with-spinner story 1`] = `
<div>
  <div
    class="ImageBodyView-module_root"
  >
    <a
      class="ImageBodyView-module_link"
      href="http://localhost:63315/static/image-body/install-spinner.png"
    >
      <div
        class="ImageBodyView-module_thumbnailContainer"
        style="width: min(100%, 320px); max-width: 320px; max-height: 320px; aspect-ratio: 1 / 1;"
      >
        <div
          class="ImageBodyView-module_placeholder"
        >
          <svg
            aria-label="Loading..."
            class="_icon_11k6c_18"
            fill="currentColor"
            height="1em"
            role="progressbar"
            style="width: 20px; height: 20px;"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M12 4.031a8 8 0 1 0 8 8 1 1 0 0 1 2 0c0 5.523-4.477 10-10 10s-10-4.477-10-10 4.477-10 10-10a1 1 0 1 1 0 2"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="ImageBodyView-module_mediaContent"
        >
          <img
            alt="Element logo"
            class="ImageBodyView-module_image"
            src="http://localhost:63315/static/image-body/install-spinner.png"
          />
        </div>
      </div>
    </a>
    <div>
      File body slot
    </div>
  </div>
</div>
`;
